--- a/static/manifest.json
+++ b/static/manifest.json
@@ -4,7 +4,7 @@
     "author": "ganemedelabs",
     "version": "1.0.0",
     "description": "Highlights color strings (e.g., hex, RGB, HSL) on webpages, with each color highlighted in its own color.",
-    "permissions": ["scripting", "activeTab"],
+    "permissions": ["scripting", "activeTab", "storage"],
     "host_permissions": ["<all_urls>"],
 
     "action": {
